Ambiente de produção v1

--- a/src/app/pages/preview/preview.component.html
+++ b/src/app/pages/preview/preview.component.html
@@ -1,38 +1,38 @@
 <div class="container mt-5">
-  <div class="card-columns p-2">
-    <div class="card h-100 bgtransp">
-      <div class="card-header m-0 bg-linho">
-        <h5 class="card-title text-center m-0">Simulação</h5>
-      </div>
-      <div class="card-body text-center">
-        <video controls (click)="toggleVideo()" class="bebevideo" id="videoPlayer" autoplay loop>
+    <div class="card-columns p-2">
+        <div class="card h-100 bgtransp">
+            <div class="card-header m-0 bg-linho">
+                <h5 class="card-title text-center m-0">Simulação</h5>
+            </div>
+            <div class="card-body text-center">
+                <video controls (click)="toggleVideo()" class="bebevideo" id="videoPlayer" autoplay loop>
           <source src="{{videosource}}" type="video/mp4" />
           Browser not supported
         </video>
-      </div>
-    </div>
-    <div class="card h-100 bgtransp">
-      <div class="card-header text-center m-0 bg-linho">
-        <h5 class="card-title m-0">Estimativa para a chegada</h5>
-      </div>
-      <div class="card-body text-center">
-        <p class="card-text">entre 16 à 28 /05/2021</p>
-      </div>
-    </div>
-    <div class="card h-100 bgtransp">
-      <div class="card-header m-0 bg-linho">
-        <h5 class="card-title m-0">Curiosidade do período atual de gestação</h5>
-      </div>
-      <div class="card-body card-img">
-        <img class="bd-placeholder-img imgcss" src="assets/img/fruta-27.png">
-        <div class="card-text">
-          <div class=" ">Período:</div>
-          <div class="ps-3">- 24 á 27 semanas</div>
-          <div class="mt-4">Relação de Tamanho:</div>
-          <div class="ps-3">- Mamão</div>
+            </div>
         </div>
-      </div>
+        <div class="card h-100 bgtransp">
+            <div class="card-header text-center m-0 bg-linho">
+                <h5 class="card-title m-0">Estimativa para a chegada</h5>
+            </div>
+            <div class="card-body text-center">
+                <p class="card-text">Previsto para 28/05/2021</p>
+            </div>
+        </div>
+        <div class="card h-100 bgtransp">
+            <div class="card-header m-0 bg-linho">
+                <h5 class="card-title m-0">Curiosidade do período atual de gestação</h5>
+            </div>
+            <div class="card-body card-img">
+                <img class="bd-placeholder-img imgcss" src="assets/img/fruta.png">
+                <div class="card-text">
+                    <div class=" ">Período:</div>
+                    <div class="ps-3">- 29 á 32 semanas</div>
+                    <div class="mt-4">Relação de Tamanho:</div>
+                    <div class="ps-3">- Moranga</div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 </div>
