Click no titulo de pagina direcionava para o home

--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -1,4 +1,4 @@
-<a *ngIf="this.cart?.length" class="cart animate__animated animate__headShake animate__slow animate__repeat-3" (click)="this.step = 0;this.openModal(bscheckout);" routerLink="/checkout" href="#"><img class="" src="/assets/img/cart.png"></a>
+<a *ngIf="this.cart?.length" class="cart animate__animated animate__headShake animate__slow animate__repeat-3" (click)="this.step = 0;this.openModal(bscheckout);" routerLink="/checkout" href="javascript:void(0)"><img class="" src="/assets/img/cart.png"></a>
 <div class="container mt-3">
     <div class="container pl-1vw pr-1vw">
         <div class="row clearfix">
