--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="">
-                <a class="bebe animate__animated animate__fadeInDown" href="#">Martim</a>
+                <a class="bebe animate__animated animate__fadeInDown" href="javascript:void(0)">Martim</a>
             </div>
         </div>
 
