--- a/src/app/pages/cadfotos/cadfotos.component.html
+++ b/src/app/pages/cadfotos/cadfotos.component.html
@@ -1,47 +1,46 @@
 <div class="local container-fluid">
-  <div class="px-lg-5">
+    <div class="px-lg-5">
 
-    <div class="row py-5">
-      <div class="col-lg-12 mx-auto mb-3">
-        <div class="text-white p-5 shadow-sm rounded banner">
-          <h1 class="display-4">Lista de Fotos</h1>
-        </div>
-      </div>
-      <form [formGroup]="cadfotoForm" (ngSubmit)="registrar()">
-        <div class="input-group mb-3">
-          <span class="input-group-text fas fa-link"></span>
-          <input type="text" class="form-control" formControlName="ImageUrl">
-        </div>
-        <div *ngIf="ImageUrl.touched && ImageUrl.errors?.required" class="alert alert-danger">Campo Obrigatório</div>
-        <div class="input-group mb-3">
-          <span class="input-group-text fas fa-info-circle"></span>
-          <input type="text" class="form-control animated fadeIn infinite" formControlName="Description"
-            placeholder="Descrição">
-        </div>
-        <div *ngIf="Description.touched && Description.errors?.required" class="alert alert-danger">Campo Obrigatório
-        </div>
-
-        <div class="mb-3"><button type="submit" class="btn btn-primary login_btn">Registrar</button></div>
-      </form>
-    </div>
-    <!-- End -->
-
-    <div class="row" *ngIf="Items">
-      <!-- Gallery item -->
-        <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let item of Items; idx">
-          <div class="bg-white rounded shadow-sm"><img src="{{item.imageUrl}}" alt="" class="img-fluid card-img-top">
-            <div class="p-4">
-              <h5> <a href="#" class="text-dark">{{item.descricao}}</a></h5>
-              <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
-                <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">{{item.imageUrl}}</span>
-                </p>
-                <div class="badge badge-danger px-3 rounded-pill font-weight-normal button" (click)="excluir(item.id)">Excluir
+        <div class="row py-5">
+            <div class="col-lg-12 mx-auto mb-3">
+                <div class="text-white p-5 shadow-sm rounded banner">
+                    <h1 class="display-4">Lista de Fotos</h1>
                 </div>
-              </div>
             </div>
-          </div>
+            <form [formGroup]="cadfotoForm" (ngSubmit)="registrar()">
+                <div class="input-group mb-3">
+                    <span class="input-group-text fas fa-link"></span>
+                    <input type="text" class="form-control" formControlName="ImageUrl">
+                </div>
+                <div *ngIf="ImageUrl.touched && ImageUrl.errors?.required" class="alert alert-danger">Campo Obrigatório</div>
+                <div class="input-group mb-3">
+                    <span class="input-group-text fas fa-info-circle"></span>
+                    <input type="text" class="form-control animated fadeIn infinite" formControlName="Description" placeholder="Descrição">
+                </div>
+                <div *ngIf="Description.touched && Description.errors?.required" class="alert alert-danger">Campo Obrigatório
+                </div>
+
+                <div class="mb-3"><button type="submit" class="btn btn-primary login_btn">Registrar</button></div>
+            </form>
         </div>
+        <!-- End -->
+
+        <div class="row" *ngIf="Items">
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4" *ngFor="let item of Items; idx">
+                <div class="bg-white rounded shadow-sm"><img src="{{item.imageUrl}}" alt="" class="img-fluid card-img-top">
+                    <div class="p-4">
+                        <h5> <a href="javascript:void(0)" class="text-dark">{{item.descricao}}</a></h5>
+                        <div class="d-flex align-items-center justify-content-between rounded-pill bg-light px-3 py-2 mt-4">
+                            <p class="small mb-0"><i class="fa fa-picture-o mr-2"></i><span class="font-weight-bold">{{item.imageUrl}}</span>
+                            </p>
+                            <div class="badge badge-danger px-3 rounded-pill font-weight-normal button" (click)="excluir(item.id)">Excluir
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="py-5 text-right"><a href="javascript:void(0)" class="btn btn-dark px-5 py-3 text-uppercase">Show me more</a></div>
     </div>
-    <div class="py-5 text-right"><a href="#" class="btn btn-dark px-5 py-3 text-uppercase">Show me more</a></div>
-  </div>
 </div>
