--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,38 +1,38 @@
 <div class="container">
-	<div class="d-flex justify-content-center h-100">
-		<div class="card animate__animated animate__fadeInUp">
-			<div class="card-header">
-				<h3>Acessar</h3>
-				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fab fa-facebook-square"></i></span>
-					<span><i class="fab fa-google-plus-square"></i></span>
-					<span><i class="fab fa-twitter-square"></i></span>
-				</div>
-			</div>
-			<div class="card-body">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card animate__animated animate__fadeInUp">
+            <div class="card-header">
+                <h3>Acessar</h3>
+                <div class="d-flex justify-content-end social_icon">
+                    <span><i class="fab fa-facebook-square"></i></span>
+                    <span><i class="fab fa-google-plus-square"></i></span>
+                    <span><i class="fab fa-twitter-square"></i></span>
+                </div>
+            </div>
+            <div class="card-body">
                 <form [formGroup]="loginForm" (ngSubmit)="login()">
                     <div class="input-group mb-3">
-						<div class="input-group-text"><i class="fas fa-user"></i></div>
-						<input type="text" class="form-control animated fadeIn infinite" formControlName="username" placeholder="Usuário">
+                        <div class="input-group-text"><i class="fas fa-user"></i></div>
+                        <input type="text" class="form-control animated fadeIn infinite" formControlName="username" placeholder="Usuário">
                     </div>
                     <div *ngIf="username.touched && username.errors?.required" class="alert alert-danger">Campo Obrigatório</div>
                     <div class="input-group mb-3">
-						<div class="input-group-text"><i class="fas fa-key"></i></div>
-                        <input  type="password" class="form-control" formControlName="password">
-                     </div>
-                     <div *ngIf="password.touched && password.errors?.required" class="alert alert-danger">Campo Obrigatório</div>                     
-                     
-                     <div class="mb-3"><button type="submit" class="btn btn-primary login_btn">Login</button></div>
-            </form>
+                        <div class="input-group-text"><i class="fas fa-key"></i></div>
+                        <input type="password" class="form-control" formControlName="password">
+                    </div>
+                    <div *ngIf="password.touched && password.errors?.required" class="alert alert-danger">Campo Obrigatório</div>
+
+                    <div class="mb-3"><button type="submit" class="btn btn-primary login_btn">Login</button></div>
+                </form>
+            </div>
+            <div class="card-footer">
+                <div class="d-flex justify-content-center links">
+                    Não está cadastrado?<a href="javascript:void(0)">Cadastre-se</a>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a href="javascript:void(0)">Esqueceu sua senha?</a>
+                </div>
+            </div>
         </div>
-			<div class="card-footer">
-				<div class="d-flex justify-content-center links">
-					Não está cadastrado?<a href="#">Cadastre-se</a>
-				</div>
-				<div class="d-flex justify-content-center">
-					<a href="#">Esqueceu sua senha?</a>
-				</div>
-			</div>
-		</div>
-	</div>
+    </div>
 </div>
