--- a/src/app/pages/mural/mural.component.html
+++ b/src/app/pages/mural/mural.component.html
@@ -2,7 +2,7 @@
     <div class="auto-invert line-b-4 align-center">
         <!-- <h4 class="font-cond-l fg-accent lts-md mgb-10" contenteditable="false">Not Yet Convinced?</h4>
       <h1 class="font-cond-b fg-text-d lts-md fs-300 fs-300-xs no-mg" contenteditable="false">Read Customer Reviews</h1> -->
-        <button class="btn btn-sm small btn-primary mt-2 mb-2 " (click)="open(mymodal)"><i class="fas fa-comments mr-2" ></i>Nova mensagem</button>
+        <button class="btn btn-sm small btn-primary mt-2 mb-2 " (click)="open(mymodal)"><i class="fas fa-comments mr-2" ></i>Deixa sua mensagem</button>
     </div>
     <!--ul class="hash-list cols-12 cols-12-xs m-0 p-0 align-center text-sm" *ngIf="Items">
         <li *ngFor="let item of Items; ; let i= index" class="col-sm-3 col-6 m-0 p-0  text-center zoom-50">
