--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -4,8 +4,8 @@
         <div class="row clearfix">
             <div class="col-lg-3 col-md-3 col-6 pl-1vw pr-1vw" *ngFor="let item of this.items; index">
                 <div *ngIf="item.tp=='x'" class="card product_item">
-                    <div class="body" [swal]="{ title: 'Faça um Pix...', text:'Clique em Confirmar para copiar o codigo Pix para a memoria do device ou retorne à lista e escaneie(foto) o QRCode. Obrigado', showCancelButton: true, cancelButtonText:'Voltar', confirmButtonText:'Confirmar' }"
-                        (confirm)="this.copyContent()">
+                    <div class="body" [swal]="{ title: 'Faça um Pix...', text:'Copie a [chave pix CPF] ou [qrcode] para a memória do device ou retorne à lista e escaneie(foto) o QRCode. Obrigado.', showCancelButton: true, cancelButtonText:'Voltar', showDenyButton: true, denyButtonText:'Chave Pix', confirmButtonText:'QRCode' }"
+                        (confirm)="this.copyContentQR()" (deny)="this.copyContentKey()">
                         <div class="cp_img">
                             <img src="{{item.img}}" alt="Product" class="img-fluid" style="cursor: pointer;">
                             <div class="hover">{{item.description}}</div>
