--- a/src/app/pages/preview/preview.component.html
+++ b/src/app/pages/preview/preview.component.html
@@ -27,9 +27,9 @@
                 <img class="bd-placeholder-img imgcss" src="assets/img/fruta.png">
                 <div class="card-text">
                     <div class=" ">Período:</div>
-                    <div class="ps-3">- 29 á 32 semanas</div>
+                    <div class="ps-3">- 32 á 35 semanas</div>
                     <div class="mt-4">Relação de Tamanho:</div>
-                    <div class="ps-3">- Moranga</div>
+                    <div class="ps-3">- Melão doce</div>
                 </div>
             </div>
         </div>
