--- a/src/app/pages/gallery/gallery.component.html
+++ b/src/app/pages/gallery/gallery.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
     <div class="col text-center pt-2">
-        <ngb-carousel wrap="true" animation="true" *ngIf="Items">
+        <ngb-carousel wrap="true" animation="true" *ngIf="bCarregado">
             <ng-template ngbSlide *ngFor="let image of Items; index">
                 <div class="picsum-img-wrapper vertical-align-center">
-                    <img src="{{image.imageUrl}}" alt="Random slide">
+                    <img src="{{image.imageUrl}}" alt="Carregando slide...">
                 </div>
                 <div class="carousel-caption">
                     {{image.description}}
